--- a/GiftCards/src/main/resources/static/css/style.css
+++ b/GiftCards/src/main/resources/static/css/style.css
@@ -73,12 +73,12 @@ input[type="submit"], .panel-body ul li a, .checkout-right-basket a,
 
 .w3l_login a {
 	font-size: .8em;
-	color: #af1021;
+	color: #13ad16;
 	width: 50px;
 	height: 50px;
 	display: block;
 	text-align: center;
-	border: 1px solid #af1021;
+	border: 1px solid #13ad16;
 	margin-top: 0.5em;
 }
 
@@ -87,7 +87,7 @@ input[type="submit"], .panel-body ul li a, .checkout-right-basket a,
 }
 
 a.act {
-	color: #ff5063 !important;
+	color: #13ad16 !important;
 }
 /*-- search --*/
 .search {
@@ -176,7 +176,7 @@ label.icon-search {
 }
 
 label.icon-search span {
-	color: #ff5063;
+	color: #13ad16;
 	border: 1px solid;
 	padding: .6em;
 }
@@ -187,7 +187,7 @@ label.icon-search span {
 }
 
 .box_1 a {
-	color: #af1021;
+	color: #13ad16;
 	font-size: 1em;
 	margin: 0;
 }
@@ -216,7 +216,7 @@ a.simpleCart_empty {
 }
 
 .w3view-cart {
-	background: #ff5063;
+	background: #13ad16;
 	border: none;
 	-o-border-radius: 7%;
 	-ms-border-radius: 7%;
@@ -444,7 +444,7 @@ p.sbmincart-empty-text {
 	margin-right: 6px;
 	padding: 0;
 	border: none;
-	color: #ff5063;
+	color: #13ad16;
 	background: none;
 	outline: none;
 	font-size: 0.9em;
@@ -478,12 +478,12 @@ p.sbmincart-empty-text {
 	-o-border-radius: 10px;
 	-ms-border-radius: 10px;
 	border-radius: 10px;
-	background: #af1021;
-	-moz-box-shadow: inset 0 0 6px #af1021;
-	-o-box-shadow: inset 0 0 6px #af1021;
-	-ms-box-shadow: inset 0 0 6px #af1021;
-	-webkit-box-shadow: inset 0 0 6px #af1021;
-	box-shadow: inset 0 0 6px #af1021;
+	background: #13ad16;
+	-moz-box-shadow: inset 0 0 6px #13ad16;
+	-o-box-shadow: inset 0 0 6px #13ad16;
+	-ms-box-shadow: inset 0 0 6px #13ad16;
+	-webkit-box-shadow: inset 0 0 6px #13ad16;
+	box-shadow: inset 0 0 6px #13ad16;
 }
 /*-- //cart-css --*/
 /*-- navigation --*/
@@ -508,7 +508,7 @@ p.sbmincart-empty-text {
 }
 
 .navbar-default .navbar-nav>li>a:focus {
-	color: #ff5063 !important;
+	color: #13ad16 !important;
 }
 
 .navbar-default {
@@ -522,7 +522,7 @@ p.sbmincart-empty-text {
 
 ul.multi-column-dropdown h6 {
 	font-size: 1.5em;
-	color: #af1021;
+	color: #13ad16;
 	margin: 0 0 1em;
 	padding-bottom: 1em;
 	border-bottom: 1px solid #E4E4E4;
@@ -551,7 +551,7 @@ ul.multi-column-dropdown h6 {
 .multi-column-dropdown li a span {
 	margin-left: 1em;
 	padding: .1em .5em;
-	background: #ff5063;
+	background: #13ad16;
 	color: #fff;
 }
 
@@ -563,7 +563,7 @@ ul.multi-column-dropdown h6 {
 	margin: 3em 0 0;
 	display: block;
 	padding: .4em .5em;
-	background: #af1021;
+	background: #13ad16;
 	text-align: center;
 }
 
@@ -601,7 +601,7 @@ ul.multi-column-dropdown h6 {
 
 .navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus
 	{
-	color: #ff5063;
+	color: #13ad16;
 }
 
 .navbar {
@@ -612,7 +612,7 @@ ul.multi-column-dropdown h6 {
 .navigation {
 	margin: 0em 0 0;
 	text-align: right;
-	background: #af1021;
+	background: #13ad16;
 }
 
 .navbar-nav {
@@ -633,7 +633,7 @@ ul.multi-column-dropdown h6 {
 	margin: .5em 0 0;
 	text-align: left;
 	padding-left: 0.3em;
-	color: #ff5063;
+	color: #13ad16;
 }
 
 li.w3pages .dropdown-menu>li>a {
@@ -654,7 +654,7 @@ li.w3pages .dropdown-menu>li>a:hover {
 
 .navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:hover,
 	.navbar-default .navbar-nav>.open>a:focus {
-	color: #ff5063;
+	color: #13ad16;
 }
 /*-- //navigation --*/
 /*-- banner --*/
@@ -835,7 +835,7 @@ li.w3pages .dropdown-menu>li>a:hover {
 }
 
 .modal button.close {
-	color: #ff5063;
+	color: #13ad16;
 	opacity: 1;
 	font-size: 2em;
 	outline: none;
@@ -858,26 +858,26 @@ li.w3pages .dropdown-menu>li>a:hover {
 	letter-spacing: 1px;
 	border-radius: 0;
 	border: none;
-	border-bottom: 1px solid #af1021;
+	border-bottom: 1px solid #13ad16;
 	margin: 0;
 }
 
 .nav-tabs>li.active>a, .nav-tabs>li.active>a:hover, .nav-tabs>li.active>a:focus
 	{
-	background-color: #af1021;
+	background-color: #13ad16;
 	color: #fff;
 	border: none;
-	border-bottom: 1px solid #af1021;
+	border-bottom: 1px solid #13ad16;
 }
 
 .nav-tabs>li>a:hover {
-	border-bottom: 1px solid #af1021;
-	color: #af1021;
+	border-bottom: 1px solid #13ad16;
+	color: #13ad16;
 }
 
 .nav-tabs {
 	border: none;
-	color: #af1021;
+	color: #13ad16;
 }
 
 .agile_ecommerce_tab_left {
@@ -895,7 +895,7 @@ li.w3pages .dropdown-menu>li>a:hover {
 
 .agile_ecommerce_tab_left h5 a {
 	font-size: 1.2em;
-	color: #ff5063;
+	color: #13ad16;
 	text-decoration: none;
 	font-weight: 700;
 	-webkit-transition: .5s all;
@@ -905,7 +905,7 @@ li.w3pages .dropdown-menu>li>a:hover {
 }
 
 .agile_ecommerce_tab_left h5 a:hover {
-	color: #af1021;
+	color: #13ad16;
 }
 
 .simpleCart_shelfItem p {
@@ -944,9 +944,9 @@ li.w3pages .dropdown-menu>li>a:hover {
 }
 
 .simpleCart_shelfItem button.w3ls-cart:hover {
-	background: #af1021;
+	background: #13ad16;
 	color: #fff;
-	border: 1px solid #af1021;
+	border: 1px solid #13ad16;
 }
 /*-- image-hover --*/
 .w3_hs_bottom {
@@ -1017,7 +1017,7 @@ li.w3pages .dropdown-menu>li>a:hover {
 }
 
 .w3_hs_bottom ul li a:hover, .flex_ecommerce a:hover {
-	background: #ff5063;
+	background: #13ad16;
 	color: #fff;
 }
 
@@ -1043,7 +1043,7 @@ li.w3pages .dropdown-menu>li>a:hover {
 
 .modal_body_right h4 {
 	font-size: 1.6em;
-	color: #ff5063;
+	color: #13ad16;
 	text-transform: capitalize;
 }
 
@@ -1171,7 +1171,7 @@ li.w3pages .dropdown-menu>li>a:hover {
 	position: absolute;
 	top: 27%;
 	left: 29%;
-	background: #ff5063;
+	background: #13ad16;
 	height: 2px;
 	width: 10%;
 }
@@ -1183,7 +1183,7 @@ li.w3pages .dropdown-menu>li>a:hover {
 	position: absolute;
 	bottom: 70%;
 	right: 29%;
-	background: #ff5063;
+	background: #13ad16;
 	height: 2px;
 	width: 10%;
 	/*
@@ -1226,7 +1226,7 @@ li.w3pages .dropdown-menu>li>a:hover {
 
 .w3agile_special_deals_grid_right_pos h5 {
 	font-weight: 700;
-	color: #ff5063;
+	color: #13ad16;
 	padding-left: 5em;
 	margin: .5em 0 0;
 }
@@ -1253,7 +1253,7 @@ li.w3pages .dropdown-menu>li>a:hover {
 
 .w3agile_special_deals_grid_left_grid_pos h4 span {
 	display: block;
-	color: #ff5063;
+	color: #13ad16;
 	margin: .5em 0 0 1em;
 }
 
@@ -1263,7 +1263,7 @@ li.w3pages .dropdown-menu>li>a:hover {
 	top: 5%;
 	width: 100px;
 	height: 100px;
-	background: #af1021;
+	background: #13ad16;
 	border-radius: 50px;
 	-webkit-border-radius: 50px;
 	-moz-border-radius: 50px;
@@ -1437,7 +1437,7 @@ ul.wmuSliderPagination {
 	font-size: 3em;
 	font-weight: 700;
 	margin: .5em 1em 0 0;
-	color: #ff5063;
+	color: #13ad16;
 }
 
 .agileinfo_banner_bottom1_grid_left h3 span i {
@@ -1450,7 +1450,7 @@ ul.wmuSliderPagination {
 	text-transform: uppercase;
 	font-size: 1em;
 	letter-spacing: 2px;
-	color: #ff5063;
+	color: #13ad16;
 	background: url(../images/img-sp.png) no-repeat 112px -4px;
 	padding: 0 45px 0 0;
 }
@@ -1522,7 +1522,7 @@ ul.wmuSliderPagination {
 	display: inline-block;
 	width: 90px;
 	height: 90px;
-	background: #af1021;
+	background: #13ad16;
 	border-radius: 500px;
 	-webkit-border-radius: 500px;
 	-moz-border-radius: 500px;
@@ -1559,7 +1559,7 @@ ul.wmuSliderPagination {
 }
 /*-- newsletter --*/
 .newsletter {
-	background: #af1021;
+	background: #13ad16;
 	padding: 3em 0;
 }
 
@@ -1594,7 +1594,7 @@ ul.wmuSliderPagination {
 	outline: none;
 	padding: 9px 0;
 	width: 15%;
-	background: url(../images/img-sp.png) no-repeat 26px -65px #ff5063;
+	background: url(../images/img-sp.png) no-repeat 26px -65px #13ad16;
 	border: none;
 	-webkit-transition: .5s all;
 	-moz-transition: .5s all;
@@ -1622,7 +1622,7 @@ ul.wmuSliderPagination {
 
 .w3_footer_grid h3:after {
 	content: '';
-	background: #af1021;
+	background: #13ad16;
 	width: 20%;
 	height: 2px;
 	position: absolute;
@@ -1672,7 +1672,7 @@ ul.wmuSliderPagination {
 .w3_footer_grid h4 {
 	margin: 2em 0 1em;
 	font-size: 1.2em;
-	color: #af1021;
+	color: #13ad16;
 }
 /*-- social-buttons --*/
 .agileits_social_button ul li {
@@ -1705,7 +1705,7 @@ ul.wmuSliderPagination {
 }
 
 .agileits_social_button ul li a:hover {
-	background-color: #af1021;
+	background-color: #13ad16;
 	display: block;
 	-webkit-border-radius: 50%;
 	-moz-border-radius: 50%;
@@ -1724,20 +1724,20 @@ ul.wmuSliderPagination {
 	bottom: -75%;
 	width: 50px;
 	height: 50px;
-	border: 3px solid #ff5063;
+	border: 3px solid #13ad16;
 	border-radius: 25px;
 	-webkit-border-radius: 25px;
 	-moz-border-radius: 25px;
 	-o-border-radius: 25px;
 	-ms-border-radius: 25px;
-	box-shadow: 0px 0px 5px 0px #ff5063;
+	box-shadow: 0px 0px 5px 0px #13ad16;
 	-webkit-transition: .5s all;
 	-moz-transition: .5s all;
 	transition: .5s all;
 }
 
 .footer-copy-pos:hover {
-	box-shadow: 0px 0px 30px 5px #ff5063;
+	box-shadow: 0px 0px 30px 5px #13ad16;
 }
 
 .footer-copy p {
@@ -1748,7 +1748,7 @@ ul.wmuSliderPagination {
 }
 
 .footer-copy p a {
-	color: #af1021;
+	color: #13ad16;
 	text-decoration: none;
 }
 
@@ -1785,14 +1785,14 @@ ul.wmuSliderPagination {
 .resp-tab-item:hover {
 	background-color: transparent;
 	text-shadow: none;
-	color: #af1021;
+	color: #13ad16;
 }
 
 .resp-tab-active, .resp-tab-active:hover {
-	border-color: #af1021;
+	border-color: #13ad16;
 	text-shadow: none;
 	color: #fff;
-	background: #af1021;
+	background: #13ad16;
 }
 
 h2.resp-accordion {
@@ -1855,7 +1855,7 @@ div#horizontalTab ul {
 }
 
 .register input[type="submit"]:hover {
-	background: #af1021;
+	background: #13ad16;
 }
 
 div#OR {
@@ -2004,7 +2004,7 @@ h3.other-nw {
 }
 
 .breadcrumb_dress ul li a {
-	color: #af1021;
+	color: #13ad16;
 	text-decoration: none;
 }
 
@@ -2036,7 +2036,7 @@ h3.other-nw {
 	.banner9 h2 span {
 	display: block;
 	margin: .5em 0 0.5em 7em;
-	color: #ff5063;
+	color: #13ad16;
 }
 
 .new-products {
@@ -2053,7 +2053,7 @@ h3.other-nw {
 
 .w3ls_mobiles_grid_left_grid h3:before {
 	content: '';
-	background: #af1021;
+	background: #13ad16;
 	width: 10%;
 	height: 2px;
 	position: absolute;
@@ -2084,7 +2084,7 @@ h3.other-nw {
 
 .panel-title, .panel_bottom li a {
 	font-size: 1em;
-	color: #af1021;
+	color: #13ad16;
 	text-transform: capitalize;
 	text-decoration: none;
 }
@@ -2234,7 +2234,7 @@ ul.panel_bottom {
 	width: 65px;
 	text-align: center;
 	height: 65px;
-	background: #af1021;
+	background: #13ad16;
 	color: #fff;
 	border-radius: 35px;
 	-webkit-border-radius: 35px;
@@ -2274,7 +2274,7 @@ ul.panel_bottom {
 .w3ls_mobiles_grid_right_grid1_pos h3 span,
 	.w3ls_mobiles_grid_right_grid1_pos1 h3 span {
 	display: block;
-	color: #ff5063;
+	color: #13ad16;
 }
 
 .w3ls_mobiles_grid_right_grid2_left {
@@ -2313,7 +2313,7 @@ select.select_item {
 	right: 2%;
 	width: 40px;
 	height: 40px;
-	background: #af1021;
+	background: #13ad16;
 	z-index: 100;
 	border-radius: 60px;
 	-webkit-border-radius: 60px;
@@ -2792,7 +2792,7 @@ h3.icon-subheading {
 .agileits-icons-title {
 	text-align: center;
 	font-size: 30px;
-	color: #ff5063;
+	color: #13ad16;
 	font-weight: 300;
 }
 
@@ -3101,7 +3101,7 @@ h2.typoh2 {
 }
 
 .w3ls_about_grid_left1 span {
-	color: #ff5063;
+	color: #13ad16;
 	font-size: 1.5em;
 	top: 1em;
 }
@@ -3121,7 +3121,7 @@ h2.typoh2 {
 
 .wthree_team_grid h4 {
 	font-size: 1em;
-	color: #af1021;
+	color: #13ad16;
 	margin: 1em 0;
 	font-weight: 600;
 }
@@ -3146,11 +3146,11 @@ h2.typoh2 {
 .wthree_team_grid img {
 	margin: 0 auto;
 	padding: .4em;
-	-webkit-box-shadow: 0px 0px 12px #ff5063;
-	-moz-box-shadow: 0px 0px 12px #ff5063;
-	-o-box-shadow: 0px 0px 12px #ff5063;
-	-ms-box-shadow: 0px 0px 12px #ff5063;
-	box-shadow: 0px 0px 12px #ff5063;
+	-webkit-box-shadow: 0px 0px 12px #13ad16;
+	-moz-box-shadow: 0px 0px 12px #13ad16;
+	-o-box-shadow: 0px 0px 12px #13ad16;
+	-ms-box-shadow: 0px 0px 12px #13ad16;
+	box-shadow: 0px 0px 12px #13ad16;
 	border-radius: 50%;
 	-webkit-border-radius: 50%;
 	-moz-border-radius: 50%;
@@ -3170,7 +3170,7 @@ h2.typoh2 {
 }
 
 .team-bottom h3 span {
-	color: #af1021;
+	color: #13ad16;
 }
 
 .team-bottom p {
@@ -3187,7 +3187,7 @@ h2.typoh2 {
 
 .contact-left h4 {
 	font-size: 1.5em;
-	color: #af1021;
+	color: #13ad16;
 	margin: 0 0 1em;
 }
 
@@ -3221,7 +3221,7 @@ h2.typoh2 {
 }
 
 .contact-left ul li a:hover {
-	color: #af1021;
+	color: #13ad16;
 }
 
 .contact-left input[type="text"], .contact-left input[type="email"],
@@ -3257,7 +3257,7 @@ h2.typoh2 {
 	font-size: 1em;
 	padding: 10px 0;
 	width: 35%;
-	background: #ff5063;
+	background: #13ad16;
 	border: none;
 	transition: .5s all;
 	-webkit-transition: .5s all;
@@ -3267,7 +3267,7 @@ h2.typoh2 {
 }
 
 .contact-left input[type="submit"]:hover {
-	background: #af1021;
+	background: #13ad16;
 }
 
 .contact-bottom {
@@ -3291,7 +3291,7 @@ h2.typoh2 {
 }
 
 .description h5 {
-	color: #af1021;
+	color: #13ad16;
 	font-size: 1em;
 	margin: 0;
 }
@@ -3309,7 +3309,7 @@ h2.typoh2 {
 .color-quality-left h5, .color-quality-right h5, .occasional h5 {
 	text-transform: uppercase;
 	font-size: 1em;
-	color: #af1021;
+	color: #13ad16;
 	margin: 0 0 1em;
 }
 
@@ -3497,11 +3497,11 @@ div#horizontalTab1 ul {
 }
 
 .additional_info_sub_grid_rightl a:hover {
-	color: #af1021;
+	color: #13ad16;
 }
 
 .additional_info_sub_grid_rightl h5 {
-	color: #af1021;
+	color: #13ad16;
 	margin: .5em 0;
 	font-size: .8em;
 }
@@ -3553,12 +3553,12 @@ div#horizontalTab1 ul {
 	font-size: 1em;
 	color: #fff;
 	width: 35%;
-	background: #ff5063;
+	background: #13ad16;
 	border: none;
 }
 
 .review_grids input[type="submit"]:hover {
-	background: #af1021;
+	background: #13ad16;
 }
 
 .review_grids form {
@@ -3575,7 +3575,7 @@ div#horizontalTab1 ul {
 }
 
 .checkout h3 span {
-	color: #af1021;
+	color: #13ad16;
 }
 
 table.timetable_sub {
@@ -3636,7 +3636,7 @@ td.invert-image a img {
 
 .checkout-left-basket h4 {
 	padding: 1em;
-	background: #af1021;
+	background: #13ad16;
 	font-size: 1.1em;
 	color: #fff;
 	text-transform: uppercase;
@@ -3688,7 +3688,7 @@ td.invert-image a img {
 }
 
 .checkout-right-basket a:hover {
-	background: #af1021;
+	background: #13ad16;
 }
 
 .checkout-right-basket a span {
@@ -4355,7 +4355,7 @@ td.invert-image a img {
 		display: block;
 	}
 	.btn-go {
-		background: #ff5063;
+		background: #13ad16;
 		color: #fff;
 		margin-left: 0px !important;
 		margin-top: 0px !important;
@@ -4462,7 +4462,7 @@ td.invert-image a img {
 		color: #fff !important;
 	}
 	.multi-column-dropdown li a:hover {
-		color: #ff5063 !important;
+		color: #13ad16 !important;
 	}
 	.multi-column-dropdown li {
 		margin: 12px 0;
@@ -4475,7 +4475,7 @@ td.invert-image a img {
 	}
 	.navbar-default .navbar-nav .open .dropdown-menu>li>a:hover,
 		.navbar-default .navbar-nav .open .dropdown-menu>li>a:focus {
-		color: #ff5063;
+		color: #13ad16;
 	}
 	.nbs-flexisel-item>img {
 		width: 60%;
@@ -5890,6 +5890,6 @@ td.invert-image a img {
 .btn-go {
 	margin-top: 25px;
 	margin-left: 15px;
-	background: #ff5063;
+	background: #13ad16;
 	color: #fff;
 }
