--- a/GiftCards/src/main/resources/templates/common/onlineads.html
+++ b/GiftCards/src/main/resources/templates/common/onlineads.html
@@ -20,11 +20,11 @@
 					</div> -->
 					<div class="col-md-3 text-center"
 						data-th-each="cat : ${categoriesList}">
-						<div class="">
+						<div class="brands">
 
 							<a th:href="@{'/products/'+${cat.id}}"> <img
 								th:src="@{'image/uploads/categories/' + ${cat.imagePath}}"
-								width="300px" alt="01" />
+								width="200px" alt="01" />
 							</a>
 
 
