--- a/GiftCards/src/main/resources/templates/homepage.html
+++ b/GiftCards/src/main/resources/templates/homepage.html
@@ -26,7 +26,7 @@
 	<!-- end of about us -->
 
 	<!-- newsletter -->
-	<div th:replace="common/home :: body-newsletter"></div>
+	<!-- <div th:replace="common/home :: body-newsletter"></div> -->
 	<!-- //newsletter -->
 
 
