--- a/GiftCards/src/main/resources/templates/adshomepage.html
+++ b/GiftCards/src/main/resources/templates/adshomepage.html
@@ -3,12 +3,9 @@
 	xmlns:sec="http://www.w3.org/1999/xhtml">
 <head th:replace="home/header :: common-header" />
 <body>
-	<div th:replace="home/navigationbar :: body-navbar"></div>
-
+	<div th:replace="home/othernavigationbar :: body-othnavbar"></div>
 
 	<div th:replace="home/publishads :: body-publishads"></div>
-
-	
 
 	<div th:replace="home/footer :: body-footer"></div>
 
