--- a/GiftCards/src/main/resources/templates/home/footer.html
+++ b/GiftCards/src/main/resources/templates/home/footer.html
@@ -17,12 +17,12 @@
 							<li><i class="glyphicon glyphicon-map-marker"
 								aria-hidden="true"></i>1234 , 4th block, Hyderabad <span>Telangana.</span></li>
 							<li><i class="glyphicon glyphicon-envelope"
-								aria-hidden="true"></i><a href="mailto:info@example.com">info@example.com</a></li>
+								aria-hidden="true"></i><a>info@coolcoupons.in</a></li>
 							<li><i class="glyphicon glyphicon-earphone"
-								aria-hidden="true"></i>+1234 567 567</li>
+								aria-hidden="true"></i>+91 9000906737</li>
 						</ul>
 					</div>
-					<div class="col-md-3 w3_footer_grid">
+					<!-- <div class="col-md-3 w3_footer_grid">
 						<h3>Faq</h3>
 						<ul class="info">
 							<li><a href="#">Online Advertising</a></li>
@@ -30,8 +30,8 @@
 							<li><a href="#">FAQ's</a></li>
 							<li><a href="#l">Special Offers</a></li>
 						</ul>
-					</div>
-					<div class="col-md-3 w3_footer_grid">
+					</div> -->
+					<!-- <div class="col-md-3 w3_footer_grid">
 						<h3>Feed back</h3>
 						<ul class="info">
 							<li><a href="#">Printing</a></li>
@@ -39,10 +39,10 @@
 							<li><a href="#">Coupons</a></li>
 
 						</ul>
-					</div>
+					</div> -->
 
 
-					<div class="col-md-3 w3_footer_grid">
+					<!-- <div class="col-md-3 w3_footer_grid">
 
 
 						<h4>Follow Us</h4>
@@ -54,14 +54,14 @@
 								<li><a href="#" class="pinterest"> </a></li>
 							</ul>
 						</div>
-					</div>
+					</div> -->
 					<div class="clearfix"></div>
 				</div>
 			</div>
 			<div class="footer-copy">
 				<div class="footer-copy1">
 					<div class="footer-copy-pos">
-						<a href="#home1" class="scroll"><img src="images/arrow.png"
+						<a href="#home1" class="scroll"><img src="/images/arrow.png"
 							alt=" " class="img-responsive" /></a>
 					</div>
 				</div>
