--- a/GiftCards/src/main/resources/templates/home/header.html
+++ b/GiftCards/src/main/resources/templates/home/header.html
@@ -9,7 +9,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="Coolcoupons " />
-
+<link th:href="@{/images/icons/favicon.ico}" rel="icon" type="image/png" />
 <link th:href="@{/homecss/bootstrap.css}" rel="stylesheet" type="text/css"
 	media="all" />
 <link th:href="@{/homecss/style.css}" rel="stylesheet" type="text/css"
