--- a/GiftCards/src/main/resources/templates/home/navigationbar.html
+++ b/GiftCards/src/main/resources/templates/home/navigationbar.html
@@ -10,7 +10,7 @@
 		<div class="header" id="home1">
 			<div class="container hidden-xs mob-640">
 				<div class="w3l_logo pull-left">
-					<img src="images/logo.jpg" alt="logo" width="240" />
+					<img src="/images/logo.jpg" alt="logo" width="240" />
 				</div>
 
 				<div class="pull-right">
@@ -67,13 +67,8 @@
 					</div>
 					<div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
 						<ul class="nav navbar-nav">
-							<li><a href="#topcoupons" class="scroll">Online
-									Advertising</a></li>
-							<li><a href="#popularstores" class="scroll">Coupon Book
-									Advertising</a></li>
+							<li><a href="#topcoupons" class="scroll">All Categories</a></li>
 							<li><a href="#aboutus" class="scroll">About Us</a></li>
-							<li><a href="#feedback" class="scroll">Feed Back</a></li>
-							<li><a href="#faq" class="scroll">Faq</a></li>
 							<li><a href="#contactus" class="scroll">Contact Us</a></li>
 						</ul>
 					</div>
@@ -114,33 +109,6 @@
 
 						</form>
 					</div>
-
-
-					<!-- <div class="mobile-search hidden-md hidden-lg ">
-						<div class="search-container">
-							<form role="form" method="post" th:action="@{/subcategories}">
-								<div class="search-box">
-									<ul>
-
-										<li class="loc-incont"><input class="boarderinput"
-											placeholder="enter here" /></li>
-										<li><i class="fa fa-map-marker location-icon"></i></li>
-										<li class="loc-cont"><select class="search-location "
-											name="cc_city_id">
-												<option data-th-each="citi : ${citiesList}"
-													th:text="${citi.cc_city_name}"
-													th:value="${citi.cc_city_id}" />
-										</select></li>
-
-										<li class="pull-right"><button class="btn btn-sm btn-go"
-												type="submit">Go</button></li>
-									</ul>
-								</div>
-							</form>
-							<div class="clearfix"></div>
-						</div>
-					</div> -->
-					<!-- end of mobile header -->
 				</nav>
 				<!-- navigation -->
 			</div>
