--- a/GiftCards/src/main/resources/templates/adsinnerpage.html
+++ b/GiftCards/src/main/resources/templates/adsinnerpage.html
@@ -3,11 +3,11 @@
 	xmlns:sec="http://www.w3.org/1999/xhtml">
 <head th:replace="home/header :: common-header" />
 <body>
-	<div th:replace="home/navigationbar :: body-navbar"></div>
+	<div th:replace="home/othernavigationbar :: body-othnavbar"></div>
 
 
 	<div th:replace="home/addinnerpage :: body-addinnerpage"></div>
-	
+
 
 	<div th:replace="home/footer :: body-footer"></div>
 
