--- a/GiftCards/src/main/resources/templates/home/addinnerpage.html
+++ b/GiftCards/src/main/resources/templates/home/addinnerpage.html
@@ -18,7 +18,7 @@
 
 					<div class="col-md-6 w3ls_mobiles_grid_right_left">
 						<div class="w3ls_mobiles_grid_right_grid1">
-							<img src="/myads/bhanutravels.jpeg" alt=" "
+							<img th:src="@{'/myads/' + ${ads.imagepath}}"
 								class="img-responsive" />
 							<div class="w3ls_mobiles_grid_right_grid1_pos1"></div>
 						</div>
@@ -45,12 +45,12 @@
 
 							<h3>Product Description</h3>
 
-							<div class="descri-cont" style="padding-left: 10px;">With cash back offers, you get big
-								rewards when you meet a particular offer's spending goal. And
-								you have freedom to do it your way. You have the flexibility to
-								purchase the required items all at once or across multiple
-								shopping trips at participating stores. You can also choose to
-								purchase all at one store</div>
+							<div class="descri-cont" style="padding-left: 10px;">With
+								cash back offers, you get big rewards when you meet a particular
+								offer's spending goal. And you have freedom to do it your way.
+								You have the flexibility to purchase the required items all at
+								once or across multiple shopping trips at participating stores.
+								You can also choose to purchase all at one store</div>
 
 						</div>
 
@@ -58,14 +58,14 @@
 
 							<h3>Terms And Condition</h3>
 
-							<div class="descri-cont" style="padding-left: 10px;">With cash back offers, you get big
-								rewards when you meet a particular offer's spending goal. And
-								you have freedom to do it your way. You have the flexibility to
-								purchase the required items all at once or across multiple
-								shopping trips at partwant to use and make sure your
-								loyalty cards are linked for the stores where you’ll make your
-								purchases. Once you reach your spending goal, your cash will be
-								paid to your PayPal account</div>
+							<div class="descri-cont" style="padding-left: 10px;">With
+								cash back offers, you get big rewards when you meet a particular
+								offer's spending goal. And you have freedom to do it your way.
+								You have the flexibility to purchase the required items all at
+								once or across multiple shopping trips at partwant to use and
+								make sure your loyalty cards are linked for the stores where
+								you’ll make your purchases. Once you reach your spending goal,
+								your cash will be paid to your PayPal account</div>
 
 						</div>
 
