--- a/GiftCards/src/main/resources/templates/home/navigationbar.html
+++ b/GiftCards/src/main/resources/templates/home/navigationbar.html
@@ -82,16 +82,16 @@
 
 
 							<div class="input-group">
-								<span class="input-group-btn">
+								<div class="input-group-btn">
 									<button id="btn-search" type="submit"
-										class="btn btn-default form-control">
+										class="btn btn-default form-control btn-nobor">
 										<small><i class="fa fa-search location-icon"></i>
-											Search Cool Coupons ....</small>
+											Search</small>
 									</button>
-								</span>
+								</div>
 								<div class="input-group-btn">
 
-									<button type="button" class="btn btn-default dropdown-toggle"
+									<button type="button" class="btn btn-default dropdown-toggle btn-nobor"
 										data-toggle="dropdown">
 										<small><span class="input-group-btn"> <i
 												class="fa fa-map-marker location-icon"></i>
