--- a/GiftCards/src/main/resources/static/homecss/style.css
+++ b/GiftCards/src/main/resources/static/homecss/style.css
@@ -2602,7 +2602,6 @@ li.list-group-item1 {
 
 .input-group {
 	margin-left: 20px;
-	
 }
 
 .in-gp-tl {
@@ -2876,10 +2875,8 @@ li.list-group-item1 {
 }
 
 .input-group {
-	
-	
-    background: #fff;
-    padding: 4px 2px;
+	background: #fff;
+	padding: 4px 2px;
 }
 
 .codes .row {
@@ -4306,10 +4303,9 @@ td.invert-image a img {
 		background: #fff;
 		margin-bottom: 20px;
 	}
-	
 	.btn-nobor {
-    border: none;
-}
+		border: none;
+	}
 	.search-container {
 		background: #fff;
 		border-radius: 2px;
@@ -4347,11 +4343,9 @@ td.invert-image a img {
 	.loc-cont {
 		width: 35%;
 	}
-	
 	.loc-incont {
 		width: 45%;
 	}
-	
 	.boarderinput {
 		width: 100%;
 		border: #6f6f6f 1px solid;
@@ -4381,7 +4375,8 @@ td.invert-image a img {
 		min-width: 735px;
 	}
 	.dropdown-menu {
-		left: -100%;
+		width: 100%;
+		left: 1%;
 	}
 	ul.multi-column-dropdown h6 {
 		font-size: 1.2em;
@@ -5543,16 +5538,14 @@ td.invert-image a img {
 		padding: 0.0em 0 0;
 	}
 	.input-group {
-    
-    background: #fff;
-    padding: 4px 2px;
+		background: #fff;
+		padding: 4px 2px;
 	}
-	.btn-nobor{
-	border: none;
+	.btn-nobor {
+		border: none;
 	}
-	.input-group{
-	margin-left: 0px;
-	
+	.input-group {
+		margin-left: 0px;
 	}
 	label.icon-search span {
 		font-size: 0.89em;
