--- a/GiftCards/src/main/resources/templates/home/addinnerpage.html
+++ b/GiftCards/src/main/resources/templates/home/addinnerpage.html
@@ -24,64 +24,79 @@
 						</div>
 					</div>
 
-					<div class="col-md-6 w3ls_mobiles_grid_right_left brands">
+					<div class="col-md-6 w3ls_mobiles_grid_right_left">
+
 						<div>&nbsp;</div>
 						<h2 th:text="${ads.adtitle}" align="center"></h2>
 						<div>&nbsp;</div>
-						<h4 th:text="${ads.contact_name}" align="left"
-							style="padding-left: 10px;"></h4>
+						<h6 th:text="${ads.adoffer}" align="center"></h6>
 						<div>&nbsp;</div>
-						<h4 th:text="${ads.contact_number}" align="left"
-							style="padding-left: 10px;"></h4>
+						<table class="table table-responsive">
+
+							<tbody>
+
+								<tr>
+									<td style="font-family: inherit; color: #000; font-size: 13px;">Company
+										or Store Name</td>
+									<td style="font-family: inherit; color: #000; font-size: 13px;">:</td>
+									<td style="font-family: inherit; color: #000; font-size: 18px;"
+										th:text="${ads.adtitle}"><b></b></td>
+								</tr>
+
+								<tr>
+									<td style="font-family: inherit; color: #000; font-size: 13px;">Contact
+										Person</td>
+									<td style="font-family: inherit; color: #000; font-size: 13px;">:</td>
+									<td style="font-family: inherit; color: #000; font-size: 18px;"
+										th:text="${ads.contact_name}"><b></b></td>
+								</tr>
+
+								<tr>
+									<td style="font-family: inherit; color: #000; font-size: 13px;">Contact
+										No.</td>
+									<td style="font-family: inherit; color: #000; font-size: 13px;">:</td>
+									<td style="font-family: inherit; color: #000; font-size: 18px;"
+										th:text="${ads.contact_number}"><b></b></td>
+								</tr>
+
+								<tr>
+									<td style="font-family: inherit; color: #000; font-size: 13px;">Email</td>
+									<td style="font-family: inherit; color: #000; font-size: 13px;">:</td>
+									<td style="font-family: inherit; color: #000; font-size: 18px;"
+										th:text="${ads.contact_email}"><b></b></td>
+								</tr>
+								<tr>
+									<td style="font-family: inherit; color: #000; font-size: 13px;">Deal</td>
+									<td style="font-family: inherit; color: #000; font-size: 13px;">:</td>
+									<td style="font-family: inherit; color: #000; font-size: 18px;"
+										th:text="${ads.adoffer}"><b></b></td>
+								</tr>
+
+
+								<tr>
+									<td style="font-family: inherit; color: #000; font-size: 13px;">Address</td>
+									<td style="font-family: inherit; color: #000; font-size: 13px;">:</td>
+									<td style="font-family: inherit; color: #000; font-size: 18px;"
+										th:text="${ads.contact_address}"><b></b></td>
+								</tr>
+
+							</tbody>
+						</table>
+
+
 						<div>&nbsp;</div>
-						<h4 th:text="${ads.contact_address}" align="left"
-							style="padding-left: 10px;"></h4>
-						<div>&nbsp;</div>
-						<h4 th:text="${ads.adoffer}" align="left"
-							style="padding-left: 10px;"></h4>
-						<div>&nbsp;</div>
 
-						<div class="product-part01">
-
-							<h3>Product Description</h3>
-
-							<div class="descri-cont" style="padding-left: 10px;">With
-								cash back offers, you get big rewards when you meet a particular
-								offer's spending goal. And you have freedom to do it your way.
-								You have the flexibility to purchase the required items all at
-								once or across multiple shopping trips at participating stores.
-								You can also choose to purchase all at one store</div>
-
-						</div>
-
-						<div class="product-part01">
-
-							<h3>Terms And Condition</h3>
-
-							<div class="descri-cont" style="padding-left: 10px;">With
-								cash back offers, you get big rewards when you meet a particular
-								offer's spending goal. And you have freedom to do it your way.
-								You have the flexibility to purchase the required items all at
-								once or across multiple shopping trips at partwant to use and
-								make sure your loyalty cards are linked for the stores where
-								you’ll make your purchases. Once you reach your spending goal,
-								your cash will be paid to your PayPal account</div>
-
-						</div>
 
 					</div>
 
 				</div>
-
 			</div>
 		</div>
-
 
 	</div>
 
 
 
 	<!-- online ads -->
-
 </body>
 </html>
