--- a/GiftCards/src/main/resources/templates/pages/adsform.html
+++ b/GiftCards/src/main/resources/templates/pages/adsform.html
@@ -63,6 +63,14 @@
 									type="text" class="form-control" name="contact_number"
 									th:value="${adsdto.contact_number}" required="required" />
 							</div>
+							
+							<div class="form-group">
+								<label for="exampleInputEmail1">Email</label> <input
+									type="text" class="form-control" name="contact_email"
+									th:value="${adsdto.contact_email}" required="required" />
+							</div>
+							
+							
 
 							<div class="form-group">
 								<label for="exampleInputEmail1">Address</label> <input
