--- a/GiftCards/src/main/resources/templates/pages/homecontent.html
+++ b/GiftCards/src/main/resources/templates/pages/homecontent.html
@@ -4,7 +4,7 @@
 <body>
 	<section th:fragment="page-admin-homecontent" class="content">
 
-		<div class="row">
+		<!-- <div class="row">
 
 			<div class="col-md-3 col-sm-6 col-xs-12">
 				<div class="info-box">
@@ -12,7 +12,19 @@
 						class="ion ion-ios-gear-outline"></i></span>
 
 					<div class="info-box-content">
-						<span class="info-box-text">CPU Traffic</span> <span
+						<span class="info-box-text">Add Traffic</span> <span
+							class="info-box-number">90<small>%</small></span>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-md-3 col-sm-6 col-xs-12">
+				<div class="info-box">
+					<span class="info-box-icon bg-aqua"><i
+						class="ion ion-ios-gear-outline"></i></span>
+
+					<div class="info-box-content">
+						<span class="info-box-text">Location Traffic</span> <span
 							class="info-box-number">90<small>%</small></span>
 					</div>
 				</div>
@@ -42,21 +54,9 @@
 				</div>
 			</div>
 
-			<div class="col-md-3 col-sm-6 col-xs-12">
-				<div class="info-box">
-					<span class="info-box-icon bg-aqua"><i
-						class="ion ion-ios-gear-outline"></i></span>
-
-					<div class="info-box-content">
-						<span class="info-box-text">CPU Traffic</span> <span
-							class="info-box-number">90<small>%</small></span>
-					</div>
-				</div>
-			</div>
 
 
-
-		</div>
+		</div> -->
 
 	</section>
 
