--- a/GiftCards/src/main/resources/templates/home/addinnerpage.html
+++ b/GiftCards/src/main/resources/templates/home/addinnerpage.html
@@ -27,9 +27,18 @@
 					<div class="col-md-6 w3ls_mobiles_grid_right_left">
 
 						<div>&nbsp;</div>
-						<h2 th:text="${ads.adtitle}" align="center"></h2>
+						<h2 style="font-family: inherit; color: #000; padding-left: 30px;">
+							Offer</h2>
 						<div>&nbsp;</div>
-						<h6 th:text="${ads.adoffer}" align="center"></h6>
+						<h6 th:text="${ads.adoffer}" align="left"
+							style="font-family: inherit; color: #9a1111; font-size: 13px; padding-left: 30px;"></h6>
+						<div>&nbsp;</div>
+						<h2 style="font-family: inherit; color: #000; padding-left: 30px;">
+							Description</h2>
+						<div>&nbsp;</div>
+						<h6 th:text="${ads.desc_offer}" align="left"
+							style="font-family: inherit; color: #5f5757; font-size: 13px; padding-left: 30px;"></h6>
+
 						<div>&nbsp;</div>
 						<table class="table table-responsive">
 
