--- a/GiftCards/src/main/resources/templates/pages/adsform.html
+++ b/GiftCards/src/main/resources/templates/pages/adsform.html
@@ -84,6 +84,13 @@
 									th:value="${adsdto.adoffer}" required="required"/>
 							</div>
 							
+							<div class="form-group">
+								<label for="exampleInputEmail1">Offer Description</label> <input
+									type="text" class="form-control" name="desc_offer"
+									th:value="${adsdto.desc_offer}" required="required"/>
+							</div>
+							
+							
 
 							<div class="form-group">
 								<label for="exampleInputFile">File input</label> <input
